--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,39 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+TriKatarina/App.config
+TriKatarina/bin/Debug/EliteKatarina.exe
+TriKatarina/bin/Debug/EliteKatarina.exe.config
+TriKatarina/bin/Debug/EliteKatarina.pdb
+TriKatarina/bin/Debug/EliteKatarina.vshost.exe.config
+TriKatarina/bin/Debug/EliteKatarina.vshost.exe.manifest
+TriKatarina/bin/Debug/LeagueSharp.Common.dll
+TriKatarina/bin/Debug/LeagueSharp.Common.pdb
+TriKatarina/bin/Debug/LeagueSharp.dll
+TriKatarina/bin/Debug/LeagueSharp.xml
+TriKatarina/bin/Debug/SharpDX.Direct3D9.dll
+TriKatarina/bin/Debug/SharpDX.dll
+TriKatarina/bin/Debug/TriKatarina.exe
+TriKatarina/bin/Debug/TriKatarina.exe.config
+TriKatarina/bin/Debug/TriKatarina.pdb
+TriKatarina/bin/Debug/TriKatarina.vshost.exe
+TriKatarina/bin/Debug/TriKatarina.vshost.exe.config
+*.manifest
+*.dll
+*.pdb
+TriKatarina/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+*.exe
+TriKatarina/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+TriKatarina/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+TriKatarina/obj/Debug/TriKatarina.csprojResolveAssemblyReference.cache
+TriKatarina/obj/Debug/TriKatarina.csproj.FileListAbsolute.txt
+Triton/bin/Debug/LeagueSharp.xml
+*.cache
+Triton/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+Triton/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+Triton/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+Triton/obj/Debug/Triton.csproj.FileListAbsolute.txt
+TritonSharp.suo
+Triton/Triton.csproj.user
+TriKatarina/obj/Debug/EliteKatarina.csproj.FileListAbsolute.txt
