Added compiled assemblies

--- a/.gitignore
+++ b/.gitignore
@@ -47,16 +47,13 @@ TriKatarina/bin/Debug/LeagueSharp.dll
 TriKatarina/bin/Debug/LeagueSharp.xml
 TriKatarina/bin/Debug/SharpDX.Direct3D9.dll
 TriKatarina/bin/Debug/SharpDX.dll
-TriKatarina/bin/Debug/TriKatarina.exe
 TriKatarina/bin/Debug/TriKatarina.exe.config
 TriKatarina/bin/Debug/TriKatarina.pdb
 TriKatarina/bin/Debug/TriKatarina.vshost.exe
 TriKatarina/bin/Debug/TriKatarina.vshost.exe.config
 *.manifest
-*.dll
 *.pdb
 TriKatarina/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-*.exe
 TriKatarina/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 TriKatarina/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 TriKatarina/obj/Debug/TriKatarina.csprojResolveAssemblyReference.cache
@@ -70,3 +67,38 @@ Triton/obj/Debug/Triton.csproj.FileListAbsolute.txt
 TritonSharp.suo
 Triton/Triton.csproj.user
 TriKatarina/obj/Debug/EliteKatarina.csproj.FileListAbsolute.txt
+TriKatarina/obj/Debug/EliteKatarina.exe
+TriKatarina/obj/Debug/TriKatarina.exe
+Triton/bin/Debug/LeagueSharp.Common.dll
+Triton/bin/Debug/LeagueSharp.dll
+Triton/bin/Debug/SharpDX.Direct3D9.dll
+Triton/bin/Debug/SharpDX.dll
+Triton/obj/Debug/Triton.dll
+Release/LeagueSharp.Common.dll
+Release/LeagueSharp.dll
+Release/LeagueSharp.xml
+Release/SharpDX.Direct3D9.dll
+Release/SharpDX.dll
+Release/TriKatarina.exe.config
+Release/TriKatarina.vshost.exe
+Release/TriKatarina.vshost.exe.config
+TriKatarina/bin/Debug/TriKatarina.exe
+TriKatarina/bin/Debug/Triton.dll
+TriKatarina/bin/Release/TriKatarina.vshost.exe.config
+TriKatarina/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+TriKatarina/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+TriKatarina/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+TriKatarina/obj/Release/TriKatarina.csproj.FileListAbsolute.txt
+TriKatarina/obj/Release/TriKatarina.exe
+Triton/bin/Release/LeagueSharp.Common.dll
+Triton/bin/Debug/Triton.dll
+Triton/bin/Release/LeagueSharp.dll
+Triton/bin/Release/LeagueSharp.xml
+Triton/bin/Release/SharpDX.Direct3D9.dll
+Triton/bin/Release/SharpDX.dll
+Triton/bin/Release/Triton.dll
+Triton/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+Triton/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+Triton/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+Triton/obj/Release/Triton.csproj.FileListAbsolute.txt
+Triton/obj/Release/Triton.dll
